[gd_scene load_steps=3 format=3 uid="uid://cmndbgancqt71"]

[ext_resource type="Script" uid="uid://ou8d5105ithy" path="res://card_detail_overlay.gd" id="1_0rgws"]
[ext_resource type="PackedScene" uid="uid://bq8ebkvp2okor" path="res://scenes/ui/card_menu_ui.tscn" id="2_uagf2"]

[node name="CardDetailOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0rgws")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.517647)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="CardName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipCard" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="VBoxContainer/TooltipCard" instance=ExtResource("2_uagf2")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 1
bbcode_enabled = true
text = "Card description is displayed here homie."
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
